--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -45,7 +45,7 @@
     <system:String x:Key="User type">账户类型</system:String>
     <system:String x:Key="Set value">设定值</system:String>
     <system:String x:Key="AssociativeModules">关联模块</system:String>
-    <system:String x:Key="Alarm">报警设置</system:String>
+    <system:String x:Key="Alarm">报警</system:String>
     <system:String x:Key="DBand">死区</system:String>
     <system:String x:Key="OP">输出</system:String>
     <system:String x:Key="Limit range">限制范围</system:String>
@@ -114,4 +114,37 @@
     <system:String x:Key="History">历史</system:String>
     <system:String x:Key="Template">模板</system:String>
     <system:String x:Key="Idle">空闲</system:String>
+    <system:String x:Key="Action">动作</system:String>
+    <system:String x:Key="General">通用</system:String>
+    <system:String x:Key="Other">其他</system:String>
+    <system:String x:Key="Instruction manual">介绍视频</system:String>
+    <system:String x:Key="Browse the product manual online">在线浏览使用手册</system:String>
+    <system:String x:Key="Instrument mode">仪器模式</system:String>
+    <system:String x:Key="Turn on simulation mode.">打开模拟模式.</system:String>
+    <system:String x:Key="Parameter Setting">参数设置</system:String>
+    <system:String x:Key="Debug Setting">调试设置</system:String>
+    <system:String x:Key="Temp Value">温度值</system:String>
+    <system:String x:Key="Lower limit">低限</system:String>
+    <system:String x:Key="Upper limit">高限</system:String>
+    <system:String x:Key="Control Mode">控制模式</system:String>
+    <system:String x:Key="Read">读</system:String>
+    <system:String x:Key="Set">写</system:String>
+    <system:String x:Key="PH Value">PH值</system:String>
+    <system:String x:Key="Pump">泵</system:String>
+    <system:String x:Key="Acid Speed">酸泵速度</system:String>
+    <system:String x:Key="Base Speed">碱泵速度</system:String>
+    <system:String x:Key="Pump Type">泵类型</system:String>
+    <system:String x:Key="Agit Value">转速值</system:String>
+    <system:String x:Key="Feed Value">补料值</system:String>
+    <system:String x:Key="Inoculation">接种</system:String>
+    <system:String x:Key="AF Speed">消泡速度</system:String>
+    <system:String x:Key="Air Speed">通气速度</system:String>
+    <system:String x:Key="Gas Type">气体类型</system:String>
+    <system:String x:Key="Software Version">软件版本</system:String>
+    <system:String x:Key="Gas">气体</system:String>
+    <system:String x:Key="Work Status">工作状态</system:String>
+    <system:String x:Key="Slope">斜率</system:String>
+    <system:String x:Key="Intercept">截距</system:String>
+    <system:String x:Key="Linear">线性</system:String>
+    <system:String x:Key="Excursion">截距</system:String>
 </ResourceDictionary>
