--- a/RD3/Views/IndexView.xaml
+++ b/RD3/Views/IndexView.xaml
@@ -22,7 +22,7 @@
     Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <Style TargetType="CheckBox">
+        <Style BasedOn="{StaticResource CheckBoxBaseStyle}" TargetType="CheckBox">
             <Setter Property="Margin" Value="8" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -77,6 +77,7 @@
                     VerticalAlignment="Center"
                     Style="{StaticResource ButtonGroupSolid}">
                     <RadioButton
+                        Name="RadioButtonDetail"
                         Width="100"
                         Height="40"
                         Margin="5,0,0,0"
@@ -88,6 +89,7 @@
                         IsChecked="True"
                         Tag="tabDetail" />
                     <RadioButton
+                        Name="RadioButtonTrend"
                         Width="100"
                         Height="40"
                         Margin="5,0,5,0"
@@ -98,6 +100,7 @@
                         Foreground="{DynamicResource SecondaryTextBrush}"
                         Tag="tabTrend" />
                     <RadioButton
+                        Name="RadioButtonOverview"
                         Width="100"
                         Height="40"
                         Margin="5,0,5,0"
@@ -397,7 +400,7 @@
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="150" />
-                                        <ColumnDefinition Width="120" />
+                                        <ColumnDefinition Width="auto" />
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="auto" />
                                         <ColumnDefinition Width="30" />
