--- a/RD3/Views/MsgView.xaml
+++ b/RD3/Views/MsgView.xaml
@@ -7,44 +7,50 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="380"
     Height="220"
+    d:DataContext="{d:DesignInstance Type=viewmodels:MsgViewModel}"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
+    <Border Background="{StaticResource BackGroundBrush}" CornerRadius="4">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
 
-        <TextBlock
-            Padding="5"
-            d:Text="温馨提示"
-            FontSize="{DynamicResource NormalFontSize}"
-            Text="{Binding Title}" />
+            <TextBlock
+                Padding="5"
+                d:Text="温馨提示"
+                FontSize="{DynamicResource NormalFontSize}"
+                Text="{Binding Title}" />
 
-        <TextBlock
-            Grid.Row="1"
-            Padding="15,0"
-            VerticalAlignment="Center"
-            d:Text="确认删除该数据吗？"
-            FontSize="{DynamicResource NormalFontSize}"
-            Text="{Binding Content}" />
+            <TextBlock
+                Grid.Row="1"
+                Padding="15,0"
+                VerticalAlignment="Center"
+                d:Text="确认删除该数据吗？"
+                FontSize="{DynamicResource NormalFontSize}"
+                Text="{Binding Content}" />
 
-        <StackPanel
-            Grid.Row="2"
-            Margin="10,10,5,10"
-            HorizontalAlignment="Right"
-            Orientation="Horizontal">
-            <Button
-                Command="{Binding SaveCommand}"
-                Content="{ex:Language Key='OK'}"
-                Style="{StaticResource MaterialDesignOutlinedButton}" />
-            <Button
-                Margin="5,0,0,0"
-                Command="{Binding CancelCommand}"
-                Content="{ex:Language Key='Cancel'}"
-                Style="{StaticResource MaterialDesignOutlinedButton}" />
-        </StackPanel>
-    </Grid>
+            <StackPanel
+                Grid.Row="2"
+                Margin="10,10,5,10"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <Button
+                    Command="{Binding SaveCommand}"
+                    Content="{ex:Language Key='OK'}"
+                    Style="{StaticResource MaterialDesignOutlinedButton}" />
+                <Button
+                    Margin="5,0,0,0"
+                    Command="{Binding CancelCommand}"
+                    Content="{ex:Language Key='Cancel'}"
+                    Style="{StaticResource MaterialDesignOutlinedButton}"
+                    Visibility="{Binding CancelVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            </StackPanel>
+        </Grid>
+    </Border>
+
 </UserControl>
