--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -147,4 +147,8 @@
     <system:String x:Key="Intercept">截距</system:String>
     <system:String x:Key="Linear">线性</system:String>
     <system:String x:Key="Excursion">截距</system:String>
+    <system:String x:Key="Registration code">注册码</system:String>
+    <system:String x:Key="Register">注册</system:String>
+    <system:String x:Key="Please register software!">请注册软件！</system:String>
+
 </ResourceDictionary>
